# Solution-to-CS50

./: .gitignore  pyproject.toml
Week1/Examples/: half.c  hello.c  hello_2.c  population.c  prime.c
Week1/cash/: cash.c
Week1/credit/: credit.c
Week1/mario-more/: mario.c
Week1/me/: hello.c
Week2/Examples/: hour.c  length.c  length2.c  no-vowels.c  password.c  scores.c  status.c  uppercase2.c
Week2/bulbs/: bulbs.c
Week2/caesar/: caesar.c
Week2/readability/: readability.c
Week2/scrabble/: scrabble.c
Week2/substitution/: substitution.c
Week3/: atoi.c  iteration.c  recursion.c
Week3/plurality/: plurality.c
Week3/runoff/: runoff.c
Week3/temps/: temps.c
Week3/tideman/: tideman.c
Week4/Examples/: copy.c  get.c
Week4/bottomup/: bmp.h
Week4/filter-less/: helpers.c
Week4/filter-more/: helpers.c
Week4/recover/: recover.c
Week5/Examples/: list.c  list_sort.c  listend.c
Week5/inheritance/: inheritance.c
Week5/speller/: dictionary.c  dictionary.h  speller.c
Week5/trie/: trie.c
Week6/Examples/: agree.py  compare.py  names.py  phonebook.csv  scores.py
Week6/bank/: bank.py
Week6/figlet/: figlet.py
Week6/sentimental-mario-less/: mario.py
Week6/sentimental-mario-more/: mario.py
Week6/world-cup/: tournament.py
Week7/: favorites-sql.py  favorites.db  favorites.py
Week7/fiftyville/: log.sql
Week7/movies/: 10.sql  6.sql  8.sql
Week8/: defualt.html  headings.html  hello.js  hello2.html  hello3.html  hello4.html  home.html  image.html  link.html  list.html  meta.html  paragraph.html  search.html  styles.css  video.html
(+3 files in other folders)
